--- a/content/astronomie.html
+++ b/content/astronomie.html
@@ -39,36 +39,33 @@
 
 		<!--	Main
 		--------------------------------->
-		<div class="bordure_transparent" id="article_1"></div>
+
 		<div class="inner">
 			<header>
-				<h2>Étoile Polaire</h2>
+				<h2>Astronomie</h2>
 				<p></p>
 			</header>
-			<article>
-				<div class="image">
-					<img src="../imgs/part_1/pic_1.jpg" alt="Pic 01" />
-				</div>
-				<p>
-					L'étoile polaire sert à indiquer le Nord aux astronomes et aux navigateurs depuis bien longtemps. Mais qu'a-t-elle de vraiment particulier ? Comment la repérer dans le ciel nocturne ?
-					L'étoile polaire sert à indiquer le Nord aux astronomes et aux navigateurs depuis bien longtemps. Mais qu'a-t-elle de vraiment particulier ? Comment la repérer dans le ciel nocturne ?L'étoile polaire sert à indiquer le Nord aux astronomes et aux navigateurs depuis bien longtemps. Mais qu'a-t-elle de vraiment particulier ? Comment la repérer dans le ciel nocturne ?L'étoile polaire sert à indiquer le Nord aux astronomes et aux navigateurs depuis bien longtemps. Mais qu'a-t-elle de vraiment particulier ? Comment la repérer dans le ciel nocturne ?
-				</p>
-			</article>
-			<div class="bordure" id="article_2"></div>
-
-			<div class="inner">
-				<header>
-					<h2>Les Pulsars</h2>
+			<div class="flex">
+				<article>
+					<div class="image">
+						<img src="../imgs/part_1/pic_1.jpg" alt="Pic 01" />
+					</div>
+					<header>
+						<h3>Étoile Polaire</h3>
+					</header>
 					<p>
-
+						L'étoile polaire sert à indiquer le Nord aux astronomes et aux navigateurs depuis bien longtemps. Mais qu'a-t-elle de vraiment particulier ? Comment la repérer dans le ciel nocturne ?
 					</p>
-				</header>
+				</article>
 				<article>
 					<div class="image">
 						<img src="../imgs/part_1/pic_2.jpg" alt="Pic 02" />
 					</div>
+					<header>
+						<h3>Les Pulsars</h3>
+					</header>
 					<p>
-						Les pulsars sont des étoiles à neutrons qui tournent très vite sur elle-même. On en dénombre environ 400 et leur période de rotation varie de 0,01 à 4 secondes !
+						Les pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournentes pulsars sont des étoiles à neutrons qui tournent très vite sur elle-même. On en dénombre environ 400 et leur période de rotation varie de 0,01 à 4 secondes !
 					</p>
 				</article>
 			</div>
