--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<title>Accueil</title>
 		<link type="text/css" rel="stylesheet" href="css/reset.css" >
 		<link type="text/css" rel="stylesheet" href="css/index.css" >
-		<link type="text/css" href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet">
 	</head>
 	<body style="margin:0; padding:0;">
 
@@ -176,7 +175,7 @@
 						</header>
 						<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
 						<footer>
-							<a href="content/nature.html#article_1" class="button special">More</a>
+							<a href="content/nature.html" class="button special">More</a>
 						</footer>
 					</article>
 					<article>
@@ -223,7 +222,6 @@
 		--------------------------------->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
-
 
 	</body>
 </html>
