--- a/content/gastronomie.html
+++ b/content/gastronomie.html
@@ -18,23 +18,24 @@
 
 		<!--	Navigation
 		--------------------------------->
-		<ul class="menu">
-			<li>
-				<a href="../index.html">Accueil </a>
-			</li>
-			<li>
-				<a href="astronomie.html">Astronomie </a>
-			</li>
-			<li>
-				<a href="gastronomie.html">Gastronomie </a>
-			</li>
-			<li>
-				<a href="musique.html">Musique </a>
-			</li>
-			<li>
-				<a href="nature.html">Nature </a>
-			</li>
-		</ul>
+		<div class="nav">
+		  <input type="checkbox" id="nav-check">
+		  <div class="nav-btn">
+		    <label for="nav-check">
+		      <span></span>
+		      <span></span>
+		      <span></span>
+		    </label>
+		  </div>
+
+		  <div class="nav-links">
+		    <a class="js-scrollTo" href="../index.html">Accueil</a>
+		    <a class="js-scrollTo" href="astronomie.html">Astronomie</a>
+		    <a class="js-scrollTo" href="gastronomie.html">Gastronomie</a>
+		    <a class="js-scrollTo" href="musique.html">Musique</a>
+		    <a class="js-scrollTo" href="nature.html">Nature</a>
+		  </div>
+		</div>
 
 
 		<!--	Main
