--- a/content/musique.html
+++ b/content/musique.html
@@ -130,6 +130,7 @@ Depuis quelque temps, une nouvelle génération d'amateurs retrouve, redécouvre
 
 		<!--	Javascript
 		--------------------------------->
+		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/script.js"></script>
 
 	</body>
