--- a/content/nature.html
+++ b/content/nature.html
@@ -10,7 +10,7 @@
 
 		<!--	Header
 		--------------------------------->
-		<div id="nature" id="article_2">
+		<div id="nature">
 			<img src="../imgs/logo/SFlogo_nature.PNG" alt="Transisor" class="logo">
 			<h1>Nature</h1>
 		</div>
@@ -28,11 +28,11 @@
 		  </div>
 
 		  <div class="nav-links">
-		    <a class="js-scrollTo" href="../index.html">Accueil</a>
-		    <a class="js-scrollTo" href="astronomie.html">Astronomie</a>
-		    <a class="js-scrollTo" href="gastronomie.html">Gastronomie</a>
-		    <a class="js-scrollTo" href="musique.html">Musique</a>
-		    <a class="js-scrollTo" href="nature.html">Nature</a>
+		    <a href="../index.html">Accueil</a>
+		    <a href="astronomie.html">Astronomie</a>
+		    <a href="gastronomie.html">Gastronomie</a>
+		    <a href="musique.html">Musique</a>
+		    <a href="nature.html">Nature</a>
 		  </div>
 		</div>
 
@@ -79,7 +79,7 @@
 				</p>
 
 			</article>
-			<div class="bordure"></div>
+			<div class="bordure" id="article_2"></div>
 
 			<div class="inner">
 				<header>
@@ -145,6 +145,7 @@
 
 		<!--	Javascript
 		--------------------------------->
+		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/script.js"></script>
 
 	</body>
