--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
 		<!--	Main
 		--------------------------------->
-
 			<!--	Astronomie
 			--------------------------------->
 			<div class="bordure_transparent" id="astronomie"></div>
@@ -59,7 +58,7 @@
 							L'étoile polaire sert à indiquer le Nord aux astronomes et aux navigateurs depuis bien longtemps. Mais qu'a-t-elle de vraiment particulier ? Comment la repérer dans le ciel nocturne ?
 						</p>
 						<footer>
-							<a href="content/astronomie.html#article_1" class="button special">More</a>
+							<a href="content/astronomie.html#article_1" class="button">More</a>
 						</footer>
 					</article>
 					<article>
@@ -73,7 +72,7 @@
 							Les pulsars sont des étoiles à neutrons qui tournent très vite sur elle-même. On en dénombre environ 400 et leur période de rotation varie de 0,01 à 4 secondes !
 						</p>
 						<footer>
-							<a href="content/astronomie.html#article_2" class="button special">More</a>
+							<a href="content/astronomie.html#article_2" class="button">More</a>
 						</footer>
 					</article>
 				</div>
@@ -93,11 +92,13 @@
 							<img src="imgs/part_2/pic_1.jpg" alt="Pic 01" />
 						</div>
 						<header>
-							<h3>Des bagels au cannabis en vente libre chez Bagelstein</h3>
+							<h3>Fêter les rois : la tradition de la galette</h3>
 						</header>
-						<p>À l’occasion de la journée internationale du cannabis, le 20 avril, la franchise française de bagels proposera, dans la limite autorisée, des petits pains verts aux graines de chanvre dans l’ensemble de ses enseignes. Buzz assuré.</p>
+						<p>
+							La galette des rois est une tradition qui remonte à des décennies. Traditionnellement, elle se partage 12 jours après Noël chaque année. A l’origine et dans la plus grande partie de la France, la galette des rois est composée d’une pâte feuilletée fourrée de frangipane et contenant une fève. Je ne vous apprends rien ici mais saviez-vous qu’il existe d’autres formes de galettes ?
+						</p>
 						<footer>
-							<a href="content/gastronomie.html#article_1" class="button special">More</a>
+							<a href="content/gastronomie.html#article_1" class="button">More</a>
 						</footer>
 					</article>
 					<article>
@@ -111,7 +112,7 @@
 							Le ministère de la Culture fait de la résistance.
 						</p>
 						<footer>
-							<a href="content/gastronomie.html#article_2" class="button special">More</a>
+							<a href="content/gastronomie.html#article_2" class="button">More</a>
 						</footer>
 					</article>
 				</div>
@@ -137,7 +138,7 @@
 							Le jazz reprend du poil de la bête, entre les clubs de jazz de Saint-Germain, les nouvelles scènes et les bars d'hôtels. Passage en revue du phénomène.
 						</p>
 						<footer>
-							<a href="content/musique.html#article_1" class="button special">More</a>
+							<a href="content/musique.html#article_1" class="button">More</a>
 						</footer>
 					</article>
 					<article>
@@ -151,7 +152,7 @@
 							La musique, un art unique et indispensable à l'apprentissage
 						</p>
 						<footer>
-							<a href="content/musique.html#article_2" class="button special">More</a>
+							<a href="content/musique.html#article_2" class="button">More</a>
 						</footer>
 					</article>
 				</div>
@@ -171,11 +172,11 @@
 							<img src="imgs/part_4/pic_1.jpg" alt="Pic 01" />
 						</div>
 						<header>
-							<h3>Praesent placerat magna</h3>
+							<h3>Le Chardonneret</h3>
 						</header>
-						<p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.</p>
+						<p>Le chardonneret élégant est un oiseau de l’ordre des passériformes, de la famille des fringillidés, passereaux de petite à moyenne taille. C’est l’un des oiseaux au plumage le plus coloré que l’on peut apercevoir dans nos jardins. Son chant mélodieux est très reconnaissable.</p>
 						<footer>
-							<a href="content/nature.html" class="button special">More</a>
+							<a href="content/nature.html#article_1" class="button">More</a>
 						</footer>
 					</article>
 					<article>
@@ -183,40 +184,31 @@
 							<img src="imgs/part_4/pic_2.jpg" alt="Pic 02" />
 						</div>
 						<header>
-							<h3>L'environnement, principale préoccupation des citoyens européens</h3>
+							<h3>Le Geai</h3>
 						</header>
 						<p>
-							C'est la plus large consultation citoyenne jamais réalisée en Europe: 1,5 million d'Européens ont fait part de leurs propositions pour réinventer l'UE. À deux mois des Européennes du 16 mai, l'initiative WeEuropeans, organisée par l'association Civico et par la plate-forme de débat Make.org, vise à recentrer le débat sur les préoccupations des citoyens. Axel Dauchez, président de Make.org, explique les objectifs de ce projet.
+							Le Geai des chênes est un grand passereau de la famille des corvidés. C’est un joli oiseau au plumage paré de couleurs vives plutôt discret et timide. Le Geai des chênes est très répandu en France. Très friand de glands de chênes qu’il stocke abondamment en automne, le Geai des chênes contribue à favoriser l’expansion de cet arbre grâce aux très nombreux glands cachés qu’il ne mange pas et qui finissent par germer et donner de nouvelles pousses.
 						</p>
 						<footer>
-							<a href="content/nature.html#article_2" class="button special">More</a>
+							<a href="content/nature.html#article_2" class="button">More</a>
 						</footer>
 					</article>
 				</div>
-				<div class="bordure"></div>
 			</div>
 
 		<!--	Footer
 		--------------------------------->
 		<footer>
-			<table>
-			   <tr>
-			      <th>Prénom</th>
-			      <th>Nom</th>
-			      <th>Mail</th>
-			   </tr>
-			   <tr>
-			      <td>Nathanaël</td>
-			      <td>Bayle</td>
-			      <td>nathanael.bayle@</td>
-			   </tr>
-			   <tr>
-			      <td>Baptiste</td>
-			      <td>Esposito</td>
-			      <td>baptiste.esposito@</td>
-			   </tr>
-			</table>
-		</footer>
+  <div class="copyright">
+    <p>By Baptiste & Nathanaël</p>
+  </div>
+  <div class="social">
+    <a href="" class="support">Contact Us</a>
+    <a href="https://www.facebook.com/bayl.nat" class="face">f</a>
+    <a href="https://twitter.com/nathanael_bayle" class="tweet">t</a>
+    <a href="https://fr.linkedin.com/in/nathanael-bayle" class="linked">in</a>
+  </div>
+</footer>
 
 		<!--	Javascript
 		--------------------------------->
