--- a/content/gastronomie.html
+++ b/content/gastronomie.html
@@ -43,32 +43,23 @@
 		<div class="bordure_transparent" id="article_1"></div>
 		<div class="inner">
 			<header>
-				<h2>Des bagels au cannabis en vente libre chez Bagelstein</h2>
-				<p></p>
+				<h2>Fêter les rois</h2>
+				<h3>La tradition de la galette</h3>
 			</header>
 			<article>
 				<div class="image">
 					<img src="../imgs/part_2/pic_1.jpg" alt="Pic 01" />
 				</div>
 				<p>
-	À l’occasion de la journée internationale du cannabis, le 20 avril, la franchise française de bagels proposera, dans la limite autorisée, des petits pains verts aux graines de chanvre dans l’ensemble de ses enseignes. Buzz assuré.
-	Le 1er avril dernier, Bagelstein annonçait la sortie prochaine dans ses restaurants du «Beugel», un bagel au cannabis. Alors que sur les réseaux sociaux les internautes criaient au canular, la franchise de bagels française vient de confirmer que son nouveau produit serait bien servi le 20 avril, à l’occasion de la journée internationale du cannabis.
-
-	C’est aux États-Unis que le 20 avril, «4/20», est une journée dédiée à l’apologie du cannabis. En France, seule une «marche pour le cannabis» est tolérée tous les ans depuis 2001, généralement début mai. Cette année, Bagelstein décide d’importer la tradition en proposant des bagels aux graines de chanvre, le temps d’une journée, sans être hors la loi pour autant. Blague, provocation, ou réel engagement pour la légalisation du cannabis?
-	Rester dans le cadre de la légalité
-
-	Le chanvre est la plante dont provient le cannabis, et c’est à partir de celle-ci que sera confectionné le pain du fameux «Beugel». Toutefois, la marque promet que son taux en THC (la substance stupéfiante du cannabis) sera inférieur à 0,2%, lui permettant de rester dans le cadre de la légalité. En effet, le Code de la santé publique précise depuis 2004 que «la culture, l’importation, l’exportation et l’utilisation industrielle et commerciale des variétés de cannabis dépourvues de propriétés stupéfiantes peuvent être autorisées» (article R5132-86). Pour les réticents, pas de crainte donc, les «Beugels» n’auront aucune conséquence sur la santé ni sur l’état des consommateurs.
-
-	Pour les intéressés, il faudra «être vif» précise la marque, car ce produit inédit ne sera disponible qu’en édition limitée: 30 beugels à garnir pour les premiers plus rapides dans chaque établissement ouvert le 20 avril.
-
-	La couleur verte du pain affiché sur les réseaux sociaux provient, elle, d’un mélange de colorant, d’oseille et de graines de chanvre biologiques, «en faible quantité» promet Bagelstein.
-	L’art de la provoc’
-
-	La marque de bagels française n’en est pas à son premier coup de com’. En 2016, Bagelstein avait déjà annoncé vouloir commercialiser des «spaces cakes» (des muffins au cannabis). Ce qui avait été fait du 1er au 9 avril. Elle n’avait toutefois pas précisé, alors, si oui ou non il y avait vraiment du cannabis dans ces produits.
-
-	Bagelstein est par ailleurs connu pour ses provocations qualifiées par certains de sexistes et homophobes. La marque aux sandwichs ronds avait révélé, toujours en 2016, une campagne publicitaire surfant sur l’affaire Denis Baupin, accusé alors par plusieurs femmes de harcèlement et d’agressions sexuelles. Drôle de communication, qui parvient toujours à faire parler d’elle, que ce soit en bien ou en mal.
-
-	Au téléphone, un communicant de Bagelstein nous affirme que ce sont simplement des blagues: «Il faut savoir rire de tout: c’est la mentalité de Gilles Abecassis, notre cofondateur». Et de promettre encore que ce «Beugel» n’est qu’une simple facétie, sans aucun principe revendicateur sous-jacent.
+					La galette des rois est une tradition qui remonte à des décennies. Traditionnellement, elle se partage 12 jours après Noël chaque année. A l’origine et dans la plus grande partie de la France, la galette des rois est composée d’une pâte feuilletée fourrée de frangipane et contenant une fève. Je ne vous apprends rien ici mais saviez-vous qu’il existe d’autres formes de galettes ?
+				</p>
+				<h3>Anecdote</h3>
+				<p>
+					Aux Etats-Unis, de nombreux pâtissiers vendent le king cake sans fève. Cela afin d’éviter tout procès potentiel ! Et oui, les Etats-Unis est connu pour être un pays où l’on peut faire un procès pour un café trop chaud alors imaginez un peu si vous vous étouffez avec une fève ! Les pâtissiers vendent donc la fève séparément avec une note explicative.
+				</p>
+				</br>
+				<p>
+					Aujourd’hui, on ne compte plus le nombre de variation autour de la galette des rois : au chocolat, à la pistache,etc. Tout est permis ! Et les pâtissiers ne se sont pas privés pour proposer leurs créations chaque année. En 2016, on a pu goûter à une galette des rois à la praline rouge chez la Maison Sève, une galette des rois aux agrumes et fruits chez Christophe Michalak ou encore la galette couronne de Ken Thomas au Westin Paris-Vendôme (certainement ma préférée cette année).
 				</p>
 			</article>
 			<div class="bordure" id="article_2"></div>
@@ -120,6 +111,7 @@ Vrai gastronome et amateur de bons vins, Emmanuel Macron est un fan de la baguet
 
 		<!--	Javascript
 		--------------------------------->
+		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/script.js"></script>
 
 	</body>
