--- a/www/index.html
+++ b/www/index.html
@@ -109,7 +109,7 @@
 							<h3>La baguette au patrimoine mondial</h3>
 						</header>
 						<p>
-							Le ministère de la Culture fait de la résistance.
+							Une histoire et un savoir faire français.
 						</p>
 						<footer>
 							<a href="content/gastronomie.html#article_2" class="button">More</a>
