--- a/content/astronomie.html
+++ b/content/astronomie.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Astronomie</title>
 		<link type="text/css" rel="stylesheet" href="../css/reset.css" >
+		<link type="text/css" rel="stylesheet" href="../css/index.css" >
 		<link type="text/css" rel="stylesheet" href="../css/article.css" >
 		<link type="text/css" href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet">
 	</head>
@@ -42,54 +43,48 @@
 		<div class="bordure_transparent" id="article_1"></div>
 		<div class="inner">
 			<header>
-				<h2>Des bagels au cannabis en vente libre chez Bagelstein</h2>
-				<h3></h3>
+				<h2>Le trou noir</h2>
+				<h3>L'objet hyper-massif</h3>
 			</header>
 			<article>
 				<div class="image">
-					<img src="../imgs/part_2/pic_1.jpg" alt="Pic 01" />
+					<img src="../imgs/part_1/pic_1.jpg" alt="Pic 01" />
 				</div>
+				<h3>Ce qu'il faut savoir</h3>
 				<p>
-	À l’occasion de la journée internationale du cannabis, le 20 avril, la franchise française de bagels proposera, dans la limite autorisée, des petits pains verts aux graines de chanvre dans l’ensemble de ses enseignes. Buzz assuré.
-	Le 1er avril dernier, Bagelstein annonçait la sortie prochaine dans ses restaurants du «Beugel», un bagel au cannabis. Alors que sur les réseaux sociaux les internautes criaient au canular, la franchise de bagels française vient de confirmer que son nouveau produit serait bien servi le 20 avril, à l’occasion de la journée internationale du cannabis.
-
-	C’est aux États-Unis que le 20 avril, «4/20», est une journée dédiée à l’apologie du cannabis. En France, seule une «marche pour le cannabis» est tolérée tous les ans depuis 2001, généralement début mai. Cette année, Bagelstein décide d’importer la tradition en proposant des bagels aux graines de chanvre, le temps d’une journée, sans être hors la loi pour autant. Blague, provocation, ou réel engagement pour la légalisation du cannabis?
-	Rester dans le cadre de la légalité
-
-	Le chanvre est la plante dont provient le cannabis, et c’est à partir de celle-ci que sera confectionné le pain du fameux «Beugel». Toutefois, la marque promet que son taux en THC (la substance stupéfiante du cannabis) sera inférieur à 0,2%, lui permettant de rester dans le cadre de la légalité. En effet, le Code de la santé publique précise depuis 2004 que «la culture, l’importation, l’exportation et l’utilisation industrielle et commerciale des variétés de cannabis dépourvues de propriétés stupéfiantes peuvent être autorisées» (article R5132-86). Pour les réticents, pas de crainte donc, les «Beugels» n’auront aucune conséquence sur la santé ni sur l’état des consommateurs.
-
-	Pour les intéressés, il faudra «être vif» précise la marque, car ce produit inédit ne sera disponible qu’en édition limitée: 30 beugels à garnir pour les premiers plus rapides dans chaque établissement ouvert le 20 avril.
-
-	La couleur verte du pain affiché sur les réseaux sociaux provient, elle, d’un mélange de colorant, d’oseille et de graines de chanvre biologiques, «en faible quantité» promet Bagelstein.
-	L’art de la provoc’
-
-	La marque de bagels française n’en est pas à son premier coup de com’. En 2016, Bagelstein avait déjà annoncé vouloir commercialiser des «spaces cakes» (des muffins au cannabis). Ce qui avait été fait du 1er au 9 avril. Elle n’avait toutefois pas précisé, alors, si oui ou non il y avait vraiment du cannabis dans ces produits.
-
-	Bagelstein est par ailleurs connu pour ses provocations qualifiées par certains de sexistes et homophobes. La marque aux sandwichs ronds avait révélé, toujours en 2016, une campagne publicitaire surfant sur l’affaire Denis Baupin, accusé alors par plusieurs femmes de harcèlement et d’agressions sexuelles. Drôle de communication, qui parvient toujours à faire parler d’elle, que ce soit en bien ou en mal.
-
-	Au téléphone, un communicant de Bagelstein nous affirme que ce sont simplement des blagues: «Il faut savoir rire de tout: c’est la mentalité de Gilles Abecassis, notre cofondateur». Et de promettre encore que ce «Beugel» n’est qu’une simple facétie, sans aucun principe revendicateur sous-jacent.
+					Les trous noir sont des objets spatiaux tellement compactes que leur champ gravitationel est assez fort pour garder la lumière. La prermière hypothèse de l'existence des trous noirs
+					vient de la relativité générale. C'est la seule théorie qui imagine la posibilité de l'existance d'un trou noir.
+					De nos jours nous confirmons, grâce à la technologie, une des hypothèses de la relativité générale.
+				</p>
+				<h3>L'apparence d'un trou noir </h3>
+				<p>
+				En effet nous avons dit precedemment qu'un trou noir gardait la lumière et donc une observation sans lumière est assez difficile. Cependant un trou noir est identifiable par son disque d'accretion (halo lumineux autour).
+				</p>
+				<h3> Les moyens utilisés </h3>
+				<p>
+				Les astronomes ont du s'allier autour du globe pour prendre cette photo spectaculaire. C'est en effet plusieur point de vue qui ont permis cette photo. Elle n'est pas encore trèes nette mais les scientifiques sont confiants pour les prochaines années à venir
 				</p>
 			</article>
 			<div class="bordure" id="article_2"></div>
 
 			<div class="inner">
 				<header>
-					<h2>La baguette au patrimoine mondial</h2>
+					<h2>La formation d'une planète gazeuse</h2>
+					<h3>Les géantes du système solaire</h3>
 					<p></p>
 				</header>
 				<article>
 					<div class="image">
-						<img src="../imgs/part_2/pic_2.jpg" alt="Pic 02" />
+						<img src="../imgs/part_1/pic_2.jpg" alt="Pic 02" />
 					</div>
+					<h3> Qu'est ce qu'une planète gazeuse</h3>
 					<p>
-						Le 12 janvier 2018, à l'Elysée, lors de la traditionnelle cérémonie de la galette, le président de la République avait apporté son soutien à Dominique Anract, président de la Confédération nationale de la boulangerie-pâtisserie française, pour l'inscription de la baguette au patrimoine immatériel de l'Unesco. En décembre dernier, un sondage, réalisé par l'institut CSA, révélait que 9 Français sur 10 soutenaient cette candidature.
-
-Mais c'était sans compter sur le zèle destructeur de certains hauts fonctionnaires du ministère de la Culture, habitués, depuis longtemps, à avoir le dernier mot Rue de Valois ; ni sur les hésitations du nouveau ministre, Franck Riester. Car c'est le ministre qui propose son meilleur candidat au président de la République. Mais ses conseillers «antibaguette» ont d'autres suggestions.
-A vous de juger et de comparer: la baguette, ou la course camarguaise et la course landaise, les Fêtes de l'ours du Haut-Vallespir (Pyrénées-Orientales), les jeux et sports athlétiques bretons, la yole ronde de la Martinique, le Biou d'Arbois, fête viticole de la ville d'Arbois (Jura). Des manifestations locales sympathiques, mais franchement pas du niveau international.
-
-La sénatrice de Paris, Catherine Dumas, présidente du Comité de soutien politique de la candidature, véritable Jeanne d'Arc de la cause, résume: «La baguette, c'est la France, 35.000 boulangeries, 180.000 emplois, des centaines d'agriculteurs du blé, les meuniers, les producteurs de levure et de sel. La baguette est un marqueur de l'identité française.» Sans compter les consommateurs…
-
-Vrai gastronome et amateur de bons vins, Emmanuel Macron est un fan de la baguette. Il avait déclaré à Dominique Anract: «Vous m'aurez à vos côtés pour les combats de l'année.»C'est donc le bon moment pour lui de proposer, au nom de la France, l'inscription de la baguette au patrimoine immatériel de l'humanité.
+					Une planète gazeuse est, tout simplement, une planète qui ne possède pas de surface solide. Le système solaire en possède 4 : Jupiter, Neptune, Uranus et Saturne
+					</p>
+					<h3> La raison de la formation </h3>
+					<p>
+					Pour bien comprendre commetn se forme une planète gazeuse, il faut savoir que tous éléments possèdent 3 états: solide,liquide et gazeux.
+					Dans le 'vide' et éloignés de toutes étoiles, les température sont extrêmement froides, ce qui rend les quasis totalités des corps solides. Ces corps agissent comme des roches et donc forment une planète. Quand cette planète atteind un champ gravitationnel assez élevé les glaces se transforment en gaz mais la force gravitationnel reste, ce qui crée une planète gazeuse.
 					</p>
 				</article>
 			</div>
@@ -98,29 +93,47 @@ Vrai gastronome et amateur de bons vins, Emmanuel Macron est un fan de la baguet
 		<!--	Footer
 		--------------------------------->
 		<footer>
-			<table>
-			   <tr>
-			      <th>Prénom</th>
-			      <th>Nom</th>
-			      <th>Mail</th>
-			   </tr>
-			   <tr>
-			      <td>Nathanaël</td>
-			      <td>Bayle</td>
-			      <td>nathanael.bayle@etu.uca.fr</td>
-			   </tr>
-			   <tr>
-			      <td>Baptiste</td>
-			      <td>Esposito</td>
-			      <td>baptiste.esposito@etu.uca.fr</td>
-			   </tr>
-			</table>
+			<div class="foot">
+				<button onclick="document.getElementById('inscription').style.display='block'" style="width:auto;">Sign Up</button>
+
+				<div id="inscription" class="modal">
+				  <span onclick="document.getElementById('inscription').style.display='none'" class="close" title="Close Modal">&times;</span>
+				  <form method="get" class="modal-content" action="../../htbin/register.py">
+				    <div class="container">
+				      <h1>Sign Up</h1>
+				      <p>Please fill in this form to create an account.</p>
+				      <hr>
+							<label for="username"><b>User Name</b></label>
+							<input type="text" placeholder="Enter User Name" id="username" name="username" required minlength="6">
+
+							<label for="firstname"><b>First Name</b></label>
+							<input type="text" placeholder="Enter First Name" id="firstname" name="firstname" required><br>
+
+							<label for="lastname"><b>Last Name</b></label>
+							<input type="text" placeholder="Enter Last Name" id="lastname" name="lastname" required><br>
+
+				      <label for="useremail"><b>Email</b></label>
+				      <input type="text" placeholder="Enter Email" id="useremail" name="useremail" required>
+
+				      <label for="userpwd"><b>Password</b></label>
+				      <input type="password" placeholder="Enter Password" id="userpdw" name="userpwd" required>
+
+							<label for="birthdate"><b>Birth Date</b></label><br>
+							<input type="text" placeholder="Enter Birth Date" id="birthdate" name="birthdate">
+
+				      <div class="clearfix">
+				        <button type="button" onclick="document.getElementById('inscription').style.display='none'" class="cancelbtn">Cancel</button>
+				        <button type="submit" class="signupbtn">Sign Up</button>
+				      </div>
+				    </div>
+				  </form>
+				</div>
+			</div>
 		</footer>
 
 		<!--	Javascript
 		--------------------------------->
-		<script type="text/javascript" src="../js/jquery.js"></script>
-		<script type="text/javascript" src="../js/script.js"></script>
+		<script type="text/javascript" src="../js/inscription.js"></script>
 
 	</body>
 </html>
