--- a/content/musique.html
+++ b/content/musique.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Musique</title>
 		<link type="text/css" rel="stylesheet" href="../css/reset.css" >
+		<link type="text/css" rel="stylesheet" href="../css/index.css" >
 		<link type="text/css" rel="stylesheet" href="../css/article.css" >
 		<link type="text/css" href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet">
 	</head>
@@ -11,7 +12,7 @@
 
 		<!--	Header
 		--------------------------------->
-		<div id="musique" id="article_1">
+		<div class="banner" id="musique">
 			<img src="../imgs/logo/SFlogo_musique.PNG" alt="Transisor" class="logo">
 			<h1>Musique</h1>
 		</div>
@@ -43,7 +44,8 @@
 		<div class="bordure_transparent" id="article_1"></div>
 		<div class="inner">
 			<header>
-				<h2>À Paris, le jazz revient sur le devant de la scène!</h2>
+				<h2>Le jazz</h2>
+				<h3> De retour sur le devant de la scène</h3>
 				<p></p>
 			</header>
 			<article>
@@ -65,43 +67,28 @@ Depuis quelque temps, une nouvelle génération d'amateurs retrouve, redécouvre
 
 			<div class="inner">
 				<header>
-					<h2>La musique, matière fondamentale pour l'apprentissage</h2>
+					<h2>Les prémices du heavy metal</h2>
+					<h3>Un peut d'histoire</h3>
 					<p></p>
 				</header>
 				<article>
 					<div class="image">
-						<img src="../imgs/part_3/pic_2.jpg" alt="Pic 02" />
+					<iframe src="https://www.youtube.com/embed/7mez_zLzcMA"></iframe>
 					</div>
+					<h3> Black Sabbath
 					<p>
-						Depuis une vingtaine d'années, la musique est devenue l'un des sujets d'étude privilégiés des neuroscientifiques autour du globe. Et pour cause: ses effets sur les capacités d'apprentissage et sur la structuration du cerveau, notamment des enfants, sont uniques.
-
-	Premier constat des études scientifiques: le cerveau naît musical. En 2015, une équipe de chercheurs espagnols a publié dans la revue de la British Medical Society une étude sur l'apparition de la sensibilité musicale in utero. À l'écoute d'une «Petite musique de nuit» de Mozart, 87 % des bébés réagissent - mouvements des pieds et de la tête. Et 50 % produisent des gestes réguliers, comme s'ils battaient la mesure. Pourquoi est-ce important? Parce que la capacité des enfants à distinguer les consonances et les dissonances et à intégrer un rythme est à la racine de leur développement linguistique. De la musique, naît le langage.
-
-	Par son impact sur nos émotions, la musique fournit aussi aux enfants des stimulants dont on sait qu'ils sont essentiels pour apprendre mieux: le plaisir et la détente. «La musique ne mobilise pas seulement le cortex auditif primaire, mais également les régions sous-corticales où se modifient nos émotions et s'impulsent les états d'éveil et de plaisir, que traduit parfois le frisson à l'audition» explique Laure Ferreri, Maître de Conférences en psychologie cognitive à l'Université Lyon 2. Ce plaisir de l'écoute active une ressource cérébrale essentielle pour les apprentissages: le circuit mésolimbique de récompense, d'où se libère la fameuse dopamine, le neurotransmetteur de notre motivation.
-
-	Ecouter de la musique apporte déjà des bénéfices nombreux aux enfants. La pratiquer, même en amateur, est encore plus efficace.
-
-	Fédérer dès le plus jeune âge grâce à la musique
-
-	Dans l'orchestre, le chœur, la composition collective, chaque individualité compte pour atteindre le résultat collectif le plus mélodieux possible. Créer ensemble, apprendre à se connaître, à s'écouter et à écouter l'autre au sein d'un orchestre, d'une chorale, d'une pratique artistique collective, forge un sens du respect, de la solidarité et du partage.
-
-	Depuis leur création, les Fabriques à Musique - opération initiée par la Sacem en partenariat avec le Ministère de la Culture et de l'Education nationale - permettent aux élèves de découvrir le processus de création avec des auteurs - compositeurs en participant au travail d'écriture et de composition.
-
-	Plus de 13 200 élèves ont ainsi travaillé avec près de 450 auteurs et compositeurs. Sur tout le territoire français, plus de 160 projets aux univers variés (électro, chanson, musique à l'image, jazz, classique et contemporain) sont actuellement en cours.
-
-	Favoriser la connaissance des œuvres dans toute leur diversité, développer la pratique musicale, encourager la créativité, découvrir les métiers de la musique, sensibiliser au droit d'auteur sont autant de missions fondamentales de la Sacem. Depuis de nombreuses années, la Sacem œuvre sans relâche pour donner à la musique la place qui lui revient dans la vie des écoles, collèges et lycées de France. L'engouement autour du dispositif des Fabriques à Musique depuis 2015, témoigne de l'importance de replacer les enjeux de l'éducation artistique et culturelle au cœur du débat public» ajoute Jean-Noël Tronc, Directeur général- gérant de la Sacem.
-
-	Remettre la musique et le collectif au cœur du système éducatif
-
-	En France, la pratique de la musique et sa place dans les systèmes scolaires demeurent cantonnées à la marge des enseignements réputés «fondamentaux» comme le français et les mathématiques. Alors qu'il faudrait presque envisager un retournement complet de perspective, et faire de l'enseignement musical, à tous les niveaux de la vie scolaire, la clef de voûte des protocoles d'apprentissages. Dans les pays particulièrement performants du classement PISA (programme international pour le suivi des acquis des élèves), où la France se classe 26ème sur 70, il n'est d'ailleurs pas étonnant de voir aux premières places des pays où la pratique musicale fait partie intégrante de la vie des élèves. Singapour, où l'enseignement musical est obligatoire à l'école depuis 1968, e
-	t où on estime que plus de 80% des enfants jouent d'un instrument trône ainsi en première plac
-
-	e du classement. Suivi de l'Estonie, la Finlande, l'Australie ou encore le Royaume-Uni, tous pays où la musique occupe une place prépondérante dans la vie scolaire, via des cours, des orchestres et des chorales.
-
-	Certaines initiatives privées et publiques font avancer la place de la musique dans les classes. Ainsi l'opération Les Fabriques à Musique citées plus haut, ou le travail de l'association Orchestre à l'école qui vient de fêter ses 10 ans. Mais le défi reste celui de la généralisation et de l'accès égal de tous les enfants à une pratique musicale. Le «Plan Chorale» porté par le Ministère de l'Education Nationale, consistant à doter chaque établissement scolaire d'une chorale en 2019, répond à cette ambition. La pratique musicale en groupe facilite l'empathie, la collaboration entre individus, ainsi que l'organisation et la coordination. La chorale a également l'avantage d'être plus aisée et moins onéreuse à mettre en place qu'un orchestre.
-
-	Apprentissage, émotion, vivre-ensemble: la musique et le chant ont tout de ce gai-savoir qui fait souvent défaut dans nos approches éducatives. Souhaitons, pour 2019 et au-delà, que tous les enfants de France, leurs enseignants et leurs parents, fassent l'expérience de l'impact si positif de la musique dans leurs classes et dans leur vie!
-</p>
+					Groupe aussi culte que déjanté, ils sont les premiers, historiquement, à désaccorder les instruments pour les rendres plus graves et à utiliser l'accord dit 'du diable', le triton , longtemps jugé trop dur à l'oreille, eux font des morceaux avec.
+					</p>
+					<h3> Ozzy Osbourne <h3>
+					<p>
+					Le chanteur est le personnage qui ressort le plus du lot dans le groupe. Accro à la drogue, il a toujours poussé les délires de plus en plus loin. <br>
+					Pour recituer cette anecdote, aucune maison de disque ne voulait les produire. Lors d'un entretient, il décide d'aller à la réunion avec deux colombes et de les lacher dans la salle de réunion. Il lache la première, tout le monde est émerveillé, mais la deuxième il decide de lui arracher la tête avec les dents.
+					Cette histoire amusait beaucoup les fans, qui à chaque concert par la suite, lanceait des peluches en forme d'oiseau sur scène. Un jour se fût une chauve-souris et il mordit dedans, ce qui lui valu des semaines de traitements contre toutes sortes de maladies. <br>
+					Ce genre d'anecdote est une bannalité pour Ozzy Osbourne
+					</p>
+					<p>
+					C'est sur cette base saine que le heavy metal pris racine
+					</p>
 				</article>
 			</div>
 		</div>
@@ -109,29 +96,47 @@ Depuis quelque temps, une nouvelle génération d'amateurs retrouve, redécouvre
 		<!--	Footer
 		--------------------------------->
 		<footer>
-			<table>
-			   <tr>
-			      <th>Prénom</th>
-			      <th>Nom</th>
-			      <th>Mail</th>
-			   </tr>
-			   <tr>
-			      <td>Nathanaël</td>
-			      <td>Bayle</td>
-			      <td>nathanael.bayle@etu.uca.fr</td>
-			   </tr>
-			   <tr>
-			      <td>Baptiste</td>
-			      <td>Esposito</td>
-			      <td>baptiste.esposito@etu.uca.fr</td>
-			   </tr>
-			</table>
+			<div class="foot">
+				<button onclick="document.getElementById('inscription').style.display='block'" style="width:auto;">Sign Up</button>
+
+				<div id="inscription" class="modal">
+				  <span onclick="document.getElementById('inscription').style.display='none'" class="close" title="Close Modal">&times;</span>
+				  <form method="get" class="modal-content" action="../../htbin/register.py">
+				    <div class="container">
+				      <h1>Sign Up</h1>
+				      <p>Please fill in this form to create an account.</p>
+				      <hr>
+							<label for="username"><b>User Name</b></label>
+							<input type="text" placeholder="Enter User Name" id="username" name="username" required minlength="6">
+
+							<label for="firstname"><b>First Name</b></label>
+							<input type="text" placeholder="Enter First Name" id="firstname" name="firstname" required><br>
+
+							<label for="lastname"><b>Last Name</b></label>
+							<input type="text" placeholder="Enter Last Name" id="lastname" name="lastname" required><br>
+
+				      <label for="useremail"><b>Email</b></label>
+				      <input type="text" placeholder="Enter Email" id="useremail" name="useremail" required>
+
+				      <label for="userpwd"><b>Password</b></label>
+				      <input type="password" placeholder="Enter Password" id="userpdw" name="userpwd" required>
+
+							<label for="birthdate"><b>Birth Date</b></label><br>
+							<input type="text" placeholder="Enter Birth Date" id="birthdate" name="birthdate">
+
+				      <div class="clearfix">
+				        <button type="button" onclick="document.getElementById('inscription').style.display='none'" class="cancelbtn">Cancel</button>
+				        <button type="submit" class="signupbtn">Sign Up</button>
+				      </div>
+				    </div>
+				  </form>
+				</div>
+			</div>
 		</footer>
 
 		<!--	Javascript
 		--------------------------------->
-		<script type="text/javascript" src="../js/jquery.js"></script>
-		<script type="text/javascript" src="../js/script.js"></script>
+		<script type="text/javascript" src="../js/inscription.js"></script>
 
 	</body>
 </html>
