--- a/content/gastronomie.html
+++ b/content/gastronomie.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Gastronomie</title>
 		<link type="text/css" rel="stylesheet" href="../css/reset.css" >
+		<link type="text/css" rel="stylesheet" href="../css/index.css" >
 		<link type="text/css" rel="stylesheet" href="../css/article.css" >
 		<link type="text/css" href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet">
 	</head>
@@ -51,7 +52,7 @@
 					<img src="../imgs/part_2/pic_1.jpg" alt="Pic 01" />
 				</div>
 				<p>
-					La galette des rois est une tradition qui remonte à des décennies. Traditionnellement, elle se partage 12 jours après Noël chaque année. A l’origine et dans la plus grande partie de la France, la galette des rois est composée d’une pâte feuilletée fourrée de frangipane et contenant une fève. Je ne vous apprends rien ici mais saviez-vous qu’il existe d’autres formes de galettes ?
+					La galette des rois est une tradition chrétienne. La recette est la même dans la quasi totalitée de la France, elle est composée d’une pâte feuilletée fourrée de frangipane et contenant une fève.
 				</p>
 				<h3>Anecdote</h3>
 				<p>
@@ -59,29 +60,43 @@
 				</p>
 				</br>
 				<p>
-					Aujourd’hui, on ne compte plus le nombre de variation autour de la galette des rois : au chocolat, à la pistache,etc. Tout est permis ! Et les pâtissiers ne se sont pas privés pour proposer leurs créations chaque année. En 2016, on a pu goûter à une galette des rois à la praline rouge chez la Maison Sève, une galette des rois aux agrumes et fruits chez Christophe Michalak ou encore la galette couronne de Ken Thomas au Westin Paris-Vendôme (certainement ma préférée cette année).
-				</p>
+					Aujourd’hui, la traditionnelle recette est un peu oubliée pour laisser place à differentes variétées : au chocolat, à la pistache,etc.  Certaines marques en profite pour eux aussi cacher des fèves dans leur gateaux. C'est une tradition collectives et très encré en France.</p>
 			</article>
 			<div class="bordure" id="article_2"></div>
 
 			<div class="inner">
 				<header>
-					<h2>La baguette au patrimoine mondial</h2>
+					<h2>La baguette</h2>
+					<h3>Un patrimoine mondial</h3>
 					<p></p>
 				</header>
 				<article>
 					<div class="image">
 						<img src="../imgs/part_2/pic_2.jpg" alt="Pic 02" />
 					</div>
+					<h3> L'histoire de la baguette</h3>
 					<p>
-						Le 12 janvier 2018, à l'Elysée, lors de la traditionnelle cérémonie de la galette, le président de la République avait apporté son soutien à Dominique Anract, président de la Confédération nationale de la boulangerie-pâtisserie française, pour l'inscription de la baguette au patrimoine immatériel de l'Unesco. En décembre dernier, un sondage, réalisé par l'institut CSA, révélait que 9 Français sur 10 soutenaient cette candidature.
-
-Mais c'était sans compter sur le zèle destructeur de certains hauts fonctionnaires du ministère de la Culture, habitués, depuis longtemps, à avoir le dernier mot Rue de Valois ; ni sur les hésitations du nouveau ministre, Franck Riester. Car c'est le ministre qui propose son meilleur candidat au président de la République. Mais ses conseillers «antibaguette» ont d'autres suggestions.
-A vous de juger et de comparer: la baguette, ou la course camarguaise et la course landaise, les Fêtes de l'ours du Haut-Vallespir (Pyrénées-Orientales), les jeux et sports athlétiques bretons, la yole ronde de la Martinique, le Biou d'Arbois, fête viticole de la ville d'Arbois (Jura). Des manifestations locales sympathiques, mais franchement pas du niveau international.
-
-La sénatrice de Paris, Catherine Dumas, présidente du Comité de soutien politique de la candidature, véritable Jeanne d'Arc de la cause, résume: «La baguette, c'est la France, 35.000 boulangeries, 180.000 emplois, des centaines d'agriculteurs du blé, les meuniers, les producteurs de levure et de sel. La baguette est un marqueur de l'identité française.» Sans compter les consommateurs…
-
-Vrai gastronome et amateur de bons vins, Emmanuel Macron est un fan de la baguette. Il avait déclaré à Dominique Anract: «Vous m'aurez à vos côtés pour les combats de l'année.»C'est donc le bon moment pour lui de proposer, au nom de la France, l'inscription de la baguette au patrimoine immatériel de l'humanité.
+					Il n'y a pas de grand créateur, le pain était rond afin d'augmenté sa conservation mais une des théories de la forme allongés de la baguette est pour le transport dans les affaires des soldats sous Napoléon Ier.
+					</p>
+					<h3> La recette </h3>
+					<p>
+					Pour créer la pâte il faut 600g d'eau pour un kilo de farine. On rajoute 18g de sel par kilo de farine. <br>
+					La cuisson est assez approximative, en fonction du poids et de la cuisson preférée le temps peut varié de 20 minutes à 30 minutes.
+					</p>
+					<table>
+						<tr><th>Ingredient </th> <th> Quantités </th></tr>
+						<tr><td> Farine </td> <td> 1 kilo </td></tr>
+						<tr><td> Eau </td> <td> 600 g </td></tr>
+						<tr><td> Sel </td> <td> 18 g </td></tr>
+						<tr><td> Temps de cuisson :</td> <td> 20-30 min </td></tr>
+					</table>
+					<p>
+					<h3> De nos jours </h3>
+					<p>
+					La baguette est maintenant devenue un symbole français de la force gastronomie française. Le savoir faire culinaire français reste très envié partout dans le monde. Elle est fabriqué dans le monde entier. C'est un des rares produits encore fabriqués par des artisants.
+					</p>
+					<p>
+					Petit conseil, si vous écrasé une baguette et qu'elle reprend sa forme c'est un signe de qualité.
 					</p>
 				</article>
 			</div>
@@ -90,29 +105,48 @@ Vrai gastronome et amateur de bons vins, Emmanuel Macron est un fan de la baguet
 		<!--	Footer
 		--------------------------------->
 		<footer>
-			<table>
-			   <tr>
-			      <th>Prénom</th>
-			      <th>Nom</th>
-			      <th>Mail</th>
-			   </tr>
-			   <tr>
-			      <td>Nathanaël</td>
-			      <td>Bayle</td>
-			      <td>nathanael.bayle@etu.uca.fr</td>
-			   </tr>
-			   <tr>
-			      <td>Baptiste</td>
-			      <td>Esposito</td>
-			      <td>baptiste.esposito@etu.uca.fr</td>
-			   </tr>
-			</table>
+			<div class="foot">
+				<button onclick="document.getElementById('inscription').style.display='block'" style="width:auto;">Sign Up</button>
+
+				<div id="inscription" class="modal">
+				  <span onclick="document.getElementById('inscription').style.display='none'" class="close" title="Close Modal">&times;</span>
+				  <form method="get" class="modal-content" action="../../htbin/register.py">
+				    <div class="container">
+				      <h1>Sign Up</h1>
+				      <p>Please fill in this form to create an account.</p>
+				      <hr>
+							<label for="username"><b>User Name</b></label>
+							<input type="text" placeholder="Enter User Name" id="username" name="username" required minlength="6">
+
+							<label for="firstname"><b>First Name</b></label>
+							<input type="text" placeholder="Enter First Name" id="firstname" name="firstname" required><br>
+
+							<label for="lastname"><b>Last Name</b></label>
+							<input type="text" placeholder="Enter Last Name" id="lastname" name="lastname" required><br>
+
+				      <label for="useremail"><b>Email</b></label>
+				      <input type="text" placeholder="Enter Email" id="useremail" name="useremail" required>
+
+				      <label for="userpwd"><b>Password</b></label>
+				      <input type="password" placeholder="Enter Password" id="userpdw" name="userpwd" required>
+
+							<label for="birthdate"><b>Birth Date</b></label><br>
+							<input type="text" placeholder="Enter Birth Date" id="birthdate" name="birthdate">
+
+				      <div class="clearfix">
+				        <button type="button" onclick="document.getElementById('inscription').style.display='none'" class="cancelbtn">Cancel</button>
+				        <button type="submit" class="signupbtn">Sign Up</button>
+				      </div>
+				    </div>
+				  </form>
+				</div>
+			</div>
 		</footer>
 
 		<!--	Javascript
 		--------------------------------->
-		<script type="text/javascript" src="../js/jquery.js"></script>
-		<script type="text/javascript" src="../js/script.js"></script>
+		<script type="text/javascript" src="../js/inscription.js"></script>
+
 
 	</body>
 </html>
