--- a/content/nature.html
+++ b/content/nature.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Nature</title>
 		<link type="text/css" rel="stylesheet" href="../css/reset.css" >
+		<link type="text/css" rel="stylesheet" href="../css/index.css" >
 		<link type="text/css" rel="stylesheet" href="../css/article.css" >
 	</head>
 	<body style="margin:0; padding:0;">
@@ -123,30 +124,49 @@
 		<!--	Footer
 		--------------------------------->
 		<footer>
-			<table>
-			   <tr>
-			      <th>Prénom</th>
-			      <th>Nom</th>
-			      <th>Mail</th>
-			   </tr>
-			   <tr>
-			      <td>Nathanaël</td>
-			      <td>Bayle</td>
-			      <td>nathanael.bayle@etu.uca.fr</td>
-			   </tr>
-			   <tr>
-			      <td>Baptiste</td>
-			      <td>Esposito</td>
-			      <td>baptiste.esposito@etu.uca.fr</td>
-			   </tr>
-			</table>
-			<p> source : https://jardinage.lemonde.fr/ </p>
+			<div class="foot">
+				<button onclick="document.getElementById('inscription').style.display='block'" style="width:auto;">Sign Up</button>
+
+				<div id="inscription" class="modal">
+				  <span onclick="document.getElementById('inscription').style.display='none'" class="close" title="Close Modal">&times;</span>
+				  <form method="get" class="modal-content" action="../../htbin/register.py">
+				    <div class="container">
+				      <h1>Sign Up</h1>
+				      <p>Please fill in this form to create an account.</p>
+				      <hr>
+							<label for="username"><b>User Name</b></label>
+							<input type="text" placeholder="Enter User Name" id="username" name="username" required minlength="6">
+
+							<label for="firstname"><b>First Name</b></label>
+							<input type="text" placeholder="Enter First Name" id="firstname" name="firstname" required><br>
+
+							<label for="lastname"><b>Last Name</b></label>
+							<input type="text" placeholder="Enter Last Name" id="lastname" name="lastname" required><br>
+
+				      <label for="useremail"><b>Email</b></label>
+				      <input type="text" placeholder="Enter Email" id="useremail" name="useremail" required>
+
+				      <label for="userpwd"><b>Password</b></label>
+				      <input type="password" placeholder="Enter Password" id="userpdw" name="userpwd" required>
+
+							<label for="birthdate"><b>Birth Date</b></label><br>
+							<input type="text" placeholder="Enter Birth Date" id="birthdate" name="birthdate">
+
+				      <div class="clearfix">
+				        <button type="button" id="envoi" onclick="document.getElementById('inscription').style.display='none'" class="cancelbtn">Cancel</button>
+				        <button type="submit" class="signupbtn">Sign Up</button>
+				      </div>
+				    </div>
+				  </form>
+				</div>
+			</div>
 		</footer>
 
 		<!--	Javascript
 		--------------------------------->
 		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/script.js"></script>
+		<script type="text/javascript" src="../js/inscription.js"></script>
 
 	</body>
 </html>
