--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link type="text/css" rel="stylesheet" href="css/reset.css" >
 		<link type="text/css" rel="stylesheet" href="css/index.css" >
 	</head>
-	<body style="margin:0; padding:0;">
+	<body>
 
 		<!--	Header
 		--------------------------------->
@@ -52,10 +52,10 @@
 							<img src="imgs/part_1/pic_1.jpg" alt="Pic 01" />
 						</div>
 						<header>
-							<h3>Étoile Polaire</h3>
+							<h3>Le trou noir</h3>
 						</header>
 						<p>
-							L'étoile polaire sert à indiquer le Nord aux astronomes et aux navigateurs depuis bien longtemps. Mais qu'a-t-elle de vraiment particulier ? Comment la repérer dans le ciel nocturne ?
+							un corps spatial qui garde la lumière et qui a pu être recemment photographié ? La technologie et l'imagination des hommes ont aidé pour ce chef d'oeuvre.
 						</p>
 						<footer>
 							<a href="content/astronomie.html#article_1" class="button">More</a>
@@ -66,10 +66,10 @@
 							<img src="imgs/part_1/pic_2.jpg" alt="Pic 02" />
 						</div>
 						<header>
-							<h3>Les Pulsars</h3>
+							<h3>Les planètes gazeuses</h3>
 						</header>
 						<p>
-							Les pulsars sont des étoiles à neutrons qui tournent très vite sur elle-même. On en dénombre environ 400 et leur période de rotation varie de 0,01 à 4 secondes !
+							Un gaz qui crée une planète ? L'explication d'un champ gravitationnel généré par des gazs.
 						</p>
 						<footer>
 							<a href="content/astronomie.html#article_2" class="button">More</a>
@@ -109,7 +109,7 @@
 							<h3>La baguette au patrimoine mondial</h3>
 						</header>
 						<p>
-							Le ministère de la Culture fait de la résistance.
+							Une histoire et un savoir faire français.
 						</p>
 						<footer>
 							<a href="content/gastronomie.html#article_2" class="button">More</a>
@@ -128,9 +128,7 @@
 				</header>
 				<div class="flex">
 					<article>
-						<div class="image">
-							<img src="imgs/part_3/pic_1.jpg" alt="Pic 01" />
-						</div>
+						<div class="image"><img src="imgs/part_3/pic_1.jpg" alt="Pic 01" /></div>
 						<header>
 							<h3>À Paris, le jazz revient sur le devant de la scène!</h3>
 						</header>
@@ -199,21 +197,49 @@
 		<!--	Footer
 		--------------------------------->
 		<footer>
-  <div class="copyright">
-    <p>By Baptiste & Nathanaël</p>
-  </div>
-  <div class="social">
-    <a href="" class="support">Contact Us</a>
-    <a href="https://www.facebook.com/bayl.nat" class="face">f</a>
-    <a href="https://twitter.com/nathanael_bayle" class="tweet">t</a>
-    <a href="https://fr.linkedin.com/in/nathanael-bayle" class="linked">in</a>
-  </div>
-</footer>
+			<div class="foot">
+				<button onclick="document.getElementById('inscription').style.display='block'" style="width:auto;">Sign Up</button>
+
+				<div id="inscription" class="modal">
+				  <span onclick="document.getElementById('inscription').style.display='none'" class="close" title="Close Modal">&times;</span>
+				  <form method="get" class="modal-content" action="../htbin/register.py">
+				    <div class="container">
+				      <h1>Sign Up</h1>
+				      <p>Please fill in this form to create an account.</p>
+				      <hr>
+							<label for="username"><b>User Name</b></label>
+							<input type="text" placeholder="Enter User Name" id="username" name="username" required minlength="6">
+
+							<label for="firstname"><b>First Name</b></label>
+							<input type="text" placeholder="Enter First Name" id="firstname" name="firstname" required><br>
+
+							<label for="lastname"><b>Last Name</b></label>
+							<input type="text" placeholder="Enter Last Name" id="lastname" name="lastname" required><br>
+
+				      <label for="useremail"><b>Email</b></label>
+				      <input type="text" placeholder="Enter Email" id="useremail" name="useremail" required>
+
+				      <label for="userpwd"><b>Password</b></label>
+				      <input type="password" placeholder="Enter Password" id="userpdw" name="userpwd" required>
+
+							<label for="birthdate"><b>Birth Date</b></label><br>
+							<input type="text" placeholder="Enter Birth Date" id="birthdate" name="birthdate">
+
+				      <div class="clearfix">
+				        <button type="button" onclick="document.getElementById('inscription').style.display='none'" class="cancelbtn">Cancel</button>
+				        <button type="submit" class="signupbtn">Sign Up</button>
+				      </div>
+				    </div>
+				  </form>
+				</div>
+			</div>
+		</footer>
 
 		<!--	Javascript
 		--------------------------------->
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/inscription.js"></script>
 
 	</body>
 </html>
